# CosmosWam

./: .gitignore  CMakeLists.txt  README.md  plot_risk_map.py  plot_risk_map_3d.py  plot_trajectories.py
docs/: cosmos3_perception_tracking_guide.md  cosmos_wam_client_summary.md  cosmos_wam_design_01.md  cosmos_wam_design_02.md  cosmos_wam_design_final.md  cosmos_wam_design_simplified.md
include/cosmos_wam/: pipeline_scheduler.h
modules/coord_transformer/: CMakeLists.txt
modules/coord_transformer/doc/: README.md
modules/coord_transformer/src/: coord_transformer.cpp
modules/downloader/: CMakeLists.txt
modules/downloader/doc/: README.md
modules/downloader/src/: downloader.cpp
modules/fd_runner/: CMakeLists.txt
modules/fd_runner/doc/: README.md
modules/fd_runner/src/: fd_runner.cpp
modules/la_runner/: CMakeLists.txt
modules/la_runner/doc/: README.md
modules/la_runner/src/: la_runner.cpp
modules/remote_executor/: CMakeLists.txt
modules/remote_executor/doc/: README.md
modules/remote_executor/src/: remote_executor.cpp
modules/risk_assessor/: CMakeLists.txt
modules/risk_assessor/doc/: README.md
modules/risk_assessor/src/: risk_assessor.cpp
modules/target_tracker/: CMakeLists.txt
modules/target_tracker/doc/: README.md
modules/target_tracker/src/: target_tracker.cpp
modules/uploader/: CMakeLists.txt
modules/uploader/doc/: README.md
output/: OutputVideo_detected.json  OutputVideo_ego_trajectory.json  OutputVideo_trajectories.json
scratch/: draw_block_diagram.py
src/: main.cpp  pipeline_scheduler.cpp
(+9 files in other folders)
